--- a/steez.css
+++ b/steez.css
@@ -100,6 +100,37 @@ body {
     text-decoration: none;
 }
 
+.big-bttn-home {
+    font-size: 2.15rem;
+    margin-left: 8px;
+    margin-right: 8px;
+    padding: 2px;
+    color: whitesmoke;
+    text-decoration: none;
+}
+
+.bttn-home {
+    font-size: 1.15rem;
+    margin-left: 8px;
+    margin-right: 8px;
+    padding: 2px;
+    border: 2px solid tomato;
+    font-style: italic;
+    color: whitesmoke;
+    text-decoration: none;
+}
+
+.bttn-home:hover {
+    font-size: 1.15rem;
+    margin-left: 8px;
+    margin-right: 8px;
+    padding: 2px;
+    border: 2px dotted slategray;
+    font-style: normal;
+    color: tomato;
+    text-decoration: none;
+}
+
 .question{
     font-size: 4rem;
     color: whitesmoke;
