--- a/steezy.css
+++ b/steezy.css
@@ -1,12 +1,7 @@
 /* GENERAL */
 
 body {
-    overflow: hidden;
-    background: url('imgs/stew.webp') no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background-color: beige;
 }
 
 /* SPECIFICS */
